fix digital features spacing issue

--- a/src/styles/components/_digital-feature.scss
+++ b/src/styles/components/_digital-feature.scss
@@ -10,6 +10,7 @@
   }
   @include desktop {
     margin-right: 15px;
+    margin-left: 15px;
     // width: 280px;
   }
   & > * {
@@ -65,6 +66,6 @@
     justify-content: flex-start;
   }
   @include desktop {
-
+    // justify-content: flex-start;
   }
 }
